--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   line-height: 100px;
   margin-top: 0;
   margin-bottom: 80px;
+  text-transform: uppercase;
 }
 
 @media (min-width:850px) {
