Add inline li elements to page

--- a/style.css
+++ b/style.css
@@ -78,6 +78,13 @@ body {
   text-align: center;
 }
 
+.nav li {
+  display: inline;
+}
+
+.nav {
+  background-color: black;
+}
 
 /* Main */
 .main .container {
