--- a/style.css
+++ b/style.css
@@ -75,11 +75,17 @@ body {
   list-style: none;
   margin: 0 auto;
   padding: 30px 0;
-  text-align: center;
+  /*text-align: center;*/
 }
 
 .nav li {
   display: inline;
+  color: white;
+  /*padding: 25px 10px;*/
+}
+
+.nav li:hover {
+  background-color: green;
 }
 
 .nav {
