--- a/style.css
+++ b/style.css
@@ -81,11 +81,13 @@ body {
 .nav li {
   display: inline;
   color: white;
-  /*padding: 25px 10px;*/
+  padding: 30px 10px;
 }
 
 .nav li:hover {
-  background-color: green;
+  background: #117bff;
+  cursor: pointer;
+  transition: background .5s;
 }
 
 .nav {
