--- a/style.css
+++ b/style.css
@@ -100,6 +100,18 @@ body {
   margin: 80px auto;
 }
 
+img {
+  width: 200px;
+  float: left;
+  margin-top: 50px;
+}
+
+.description {
+  float: right;
+  width: 650px;
+  margin-left: 50px;
+}
+
 
 /* Jumbotron */
 .jumbotron {
