--- a/style.css
+++ b/style.css
@@ -20,10 +20,8 @@ body {
 .header {
   height: 800px;
   text-align: center;
-  background: url(https://s3.amazonaws.com/codecademy-content/projects/innovation-cloud/bg.jpg) center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background: url(https://s3.amazonaws.com/codecademy-content/projects/innovation-cloud/bg.jpg);
+  background-position: center center;
   background-size: cover;
 }
 
