--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ img {
 }
 
 .footer p {
-  display: inline-block;
-  margin-top: 30px;
+  /*display: inline-block;
+  margin-top: 30px;*/
   font-size: 14px;
 }
