--- a/style.css
+++ b/style.css
@@ -151,6 +151,12 @@ img {
   /*margin-top: 50px;*/
 }
 
+.footer p {
+  display: inline-block;
+  margin-top: 30px;
+  font-size: 14px;
+}
+
 /* Media Queries */
 @media (max-width: 500px) {
   .header h1 {
@@ -167,8 +173,13 @@ img {
   }
 }
 
-.footer p {
-  display: inline-block;
-  margin-top: 30px;
-  font-size: 14px;
+/* remember to change max/min */
+@media screen and (max-width: 430px) {
+  li:nth-child(4), li:last-child {
+    display: none;
+  }
+
+  .nav ul {
+    text-align: center;
+  }
 }
