--- a/style.css
+++ b/style.css
@@ -105,13 +105,7 @@ body {
 img {
   width: 200px;
   float: left;
-  margin-top: 50px;
-}
-
-.description {
-  float: right;
-  width: 650px;
-  margin-left: 50px;
+  margin: 50px 50px 50px 0;
 }
 
 
