--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
 img {
   width: 200px;
   float: left;
-  margin: 50px 50px 50px 0;
+  margin: 50px 75px 50px 0;
 }
 
 
@@ -164,7 +164,13 @@ img {
 
   .main img {
     /*width: 100%;*/
+    /*width: 200px;*/
+    float: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
+
 }
 
 @media screen and (max-width: 430px) {
