--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
 }
 
 .main {
-  height: 300px;
+  height: auto;
 }
 
 img {
@@ -169,6 +169,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 100px;
   }
 
 }
