Remove .btn for li elements

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
   padding: 10px 40px;
 }
 
-.btn:hover {
+.btn:hover, .nav li:hover {
   background: #117bff;
   cursor: pointer;
   transition: background .5s;
